--- a/jatek_tortenet.html
+++ b/jatek_tortenet.html
@@ -9,138 +9,142 @@
     <link rel="stylesheet" href="index.css">
 
     <style>
-        img {
-            float: right;
+        .tortenet-p {
+            max-width: 100rem;
         }
 
-        p {
-            max-width: 100rem;
+        .vege-div {
+            border: 70px solid rgb(44, 49, 38);
+        }
+
+        .terkoz {
+            border: 20px solid rgb(44, 49, 38);
         }
     </style>
 
 </head>
 
 <body>
-    <div id="topnav">
-        <a href="index.html">Kezdőlap</a>
-        <a href="mufajok.html">Műfajok</a>
-        <a href="onlinejatekok.html">Online játékok</a>
-        <a href="sikeres.html">Sikeres játékok</a>
-        <a href="speedrunok.html">Speedrunok</a>
-        <a href="videojatekok.html">Videójátékok</a>
+<div id="topnav">
+    <a href="index.html">Kezdőlap</a>
+    <a href="mufajok.html">Műfajok</a>
+    <a href="onlinejatekok.html">Online játékok</a>
+    <a href="sikeres.html">Sikeres játékok</a>
+    <a href="speedrunok.html">Speedrunok</a>
+    <a href="videojatekok.html">Videójátékok</a>
+</div>
+<hr>
+<div></div>
+<div class="tortenetkep">
+    <img src="images/tennis_for_two.jpg" alt="Tennis for two">
+    <div class="tortenetkepszoveg">
+        Tennis for two
     </div>
-    <hr>
-    <div style="border: 20px solid rgb(44, 49, 38);"></div>
-    <div class="tortenetkep">
-        <img src="images/tennis_for_two.jpg" alt="Tennis for two">
-        <div class="tortenetkepszoveg">
-            Tennis for two
-        </div>
-    </div>
-    <h1>A Videójátékok Története</h1>
+</div>
+<h1>A Videójátékok Története</h1>
 
-    <p>Az elektronikus videójátékok története a 20. század közepére nyúlik vissza. A korai videójátékok különféle
-        elektronikus eszközökön jelentek meg és változatos megjelenítő eszközöket használtak. Az elektronikus
-        videójátékok legkorábbi példája egy 1947-ből származó szabadalom, amelyet „Katódsugárcsöves szórakoztató eszköz”
-        néven 1947. január 25-én nyújtott be Thomas T. Goldsmith Jr. és Estle Ray Mann, és amelyet 1948. december 14-én
-        jegyeztek be az US2455992 számú amerikai egyesült államokbeli szabadalomként. Ezt a játékot a radartechnológia
-        inspirálta, analóg eszközökkel épült fel. Maga a játék egy vektoros kijelzőn egy rakéta röptét szimulálta,
-        amelyet a képernyőre rajzolt célokba kellett irányítani.
-    </p>
-    <p>
-        Az ezután következő jelentősebb korai játékok:
-    </p>
+<p class="tortenet-p">Az elektronikus videójátékok története a 20. század közepére nyúlik vissza. A korai videójátékok
+    különféle
+    elektronikus eszközökön jelentek meg és változatos megjelenítő eszközöket használtak. Az elektronikus
+    videójátékok legkorábbi példája egy 1947-ből származó szabadalom, amelyet „Katódsugárcsöves szórakoztató eszköz”
+    néven 1947. január 25-én nyújtott be Thomas T. Goldsmith Jr. és Estle Ray Mann, és amelyet 1948. december 14-én
+    jegyeztek be az US2455992 számú amerikai egyesült államokbeli szabadalomként. Ezt a játékot a radartechnológia
+    inspirálta, analóg eszközökkel épült fel. Maga a játék egy vektoros kijelzőn egy rakéta röptét szimulálta,
+    amelyet a képernyőre rajzolt célokba kellett irányítani.
+</p>
+<p class="tortenet-p">
+    Az ezután következő jelentősebb korai játékok:
+</p>
 
-    <ul>
-        <li>
-            <p>
-                Christopher Strachey brit számítástechnikus Nimrod számítógépen bemutatott játéka az 1951-es Britannia
-                Fesztiválon,
-            </p>
-        </li>
-        <li>
-            <p>
-                OXO – egy számítógépes tic-tac-toe játék, amely az EDSAC számítógépre készült 1952-ben, szerzője
-                Alexander S. Douglas,
-            <div class="tortenetkep">
-                <img src="images/Spacewar.jpg" alt="Spacewar">
-                <div class="tortenetkepszoveg">
-                    Spacewar
-                </div>
+<ul>
+    <li>
+        <p class="tortenet-p">
+            Christopher Strachey brit számítástechnikus Nimrod számítógépen bemutatott játéka az 1951-es Britannia
+            Fesztiválon,
+        </p>
+    </li>
+    <li>
+        <p class="tortenet-p">
+            OXO – egy számítógépes tic-tac-toe játék, amely az EDSAC számítógépre készült 1952-ben, szerzője
+            Alexander S. Douglas,
+        <div class="tortenetkep">
+            <img src="images/Spacewar.jpg" alt="Spacewar">
+            <div class="tortenetkepszoveg">
+                Spacewar
             </div>
-        </li>
-        <li>
-            <p>
-                Tennis for Two – interaktív elektronikus játék 1958-ból, szerzője William Higinbotham,
-            </p>
-        </li>
-        <li>
-            <p>
-                Spacewar! – 1961-ben megjelent játék a DEC PDP-1 számítógépre, az MIT diákjainak fejlesztésében.
-            </p>
-        </li>
-    </ul>
+        </div>
+    </li>
+    <li>
+        <p class="tortenet-p">
+            Tennis for Two – interaktív elektronikus játék 1958-ból, szerzője William Higinbotham,
+        </p>
+    </li>
+    <li>
+        <p class="tortenet-p">
+            Spacewar! – 1961-ben megjelent játék a DEC PDP-1 számítógépre, az MIT diákjainak fejlesztésében.
+        </p>
+    </li>
+</ul>
 
-    <p>
-        1951-ben a Britannia Fesztiválon bemutatott Nimrod számítógép kifejezetten a nim játék megvalósítását
-        demonstrálta. A számítógép több panellen felvillanó fényforrásokkal jelenítette meg a játék folyamatát, a
-        kezelésre pedig egy pulton található kapcsolókkal és nyomógombokkal volt lehetőség.
-    </p>
-    <p>
-        1952-ben a Cambridge-i Egyetemen doktorált Alexander S. Douglas az egyetem EDSAC (angolul: Electronic Delay
-        Storage Automatic Calculator), elektroncsöves számítógépén valósította meg a tic-tac-toe játékot OXO névvel,
-        amelyet egy 16 sorba és 32 oszlopba rendezett pontokból álló katódsugárcsöves kijelzőn jelenített meg.
-    </p>
-    <p>
-        William Higinbotham 1958-ban a Brookhaveni Nemzeti Laboratóriumban dolgozott, ahol a Tennis for Two elnevezésű
-        játékot készítette. A játékot egy Donner Model 30 analóg számítógép működtette, a megjelenítésről pedig egy
-        oszcilloszkóp gondoskodott. A kijelző oldalnézetből mutatta a teniszpályát és a mozgó labdát, ahol a két játékos
-        egy-egy kézi kontrollerrel irányíthatta a játékot. A berendezést pár éven belül szétszedték, hogy az
-        alkotórészeit a laboratórium egyéb projektjeiben újra felhasználják – ez az 50-es években jellemző volt,
-        tekintve hogy ezek az alkatrészek nagy értéket képviseltek. A laboratórium munkatársai 1997-ben a labor
-        fennállásának 50 éves évfordulója alkalmából újraalkották a gépet valamint a játékot, amelyet a 2008-ban
-        mutattak be a játék első megjelenésének 50 éves évfordulóján.
-    </p>
-    <p>
-        A Spacewar! játékprogramot 1961-ben írták Martin Graetz, Alan Kotok és Steve Russell, az MIT hallgatói és
-        kutatói. A kétajtós szekrény méretű PDP-1 típusú számítógépen két űrhajó egymás elleni harcát szimulálták. A
-        programot a készítői ingyenesen terjesztették lyukszalagon (a korai számítógépek szabványos adathordozóján), s
-        hamar elterjedt az akkori tudományos kutatói szférában.
-    </p>
-    <div style="border: 0 solid rgb(44, 49, 38);"></div>
-    <div class="tortenetkep">
-        <img src="images/Joystick.png" alt="">
-        <div class="tortenetkepszoveg">
-            Joystick
-        </div>
+<p class="tortenet-p">
+    1951-ben a Britannia Fesztiválon bemutatott Nimrod számítógép kifejezetten a nim játék megvalósítását
+    demonstrálta. A számítógép több panellen felvillanó fényforrásokkal jelenítette meg a játék folyamatát, a
+    kezelésre pedig egy pulton található kapcsolókkal és nyomógombokkal volt lehetőség.
+</p>
+<p class="tortenet-p">
+    1952-ben a Cambridge-i Egyetemen doktorált Alexander S. Douglas az egyetem EDSAC (angolul: Electronic Delay
+    Storage Automatic Calculator), elektroncsöves számítógépén valósította meg a tic-tac-toe játékot OXO névvel,
+    amelyet egy 16 sorba és 32 oszlopba rendezett pontokból álló katódsugárcsöves kijelzőn jelenített meg.
+</p>
+<p class="tortenet-p">
+    William Higinbotham 1958-ban a Brookhaveni Nemzeti Laboratóriumban dolgozott, ahol a Tennis for Two elnevezésű
+    játékot készítette. A játékot egy Donner Model 30 analóg számítógép működtette, a megjelenítésről pedig egy
+    oszcilloszkóp gondoskodott. A kijelző oldalnézetből mutatta a teniszpályát és a mozgó labdát, ahol a két játékos
+    egy-egy kézi kontrollerrel irányíthatta a játékot. A berendezést pár éven belül szétszedték, hogy az
+    alkotórészeit a laboratórium egyéb projektjeiben újra felhasználják – ez az 50-es években jellemző volt,
+    tekintve hogy ezek az alkatrészek nagy értéket képviseltek. A laboratórium munkatársai 1997-ben a labor
+    fennállásának 50 éves évfordulója alkalmából újraalkották a gépet valamint a játékot, amelyet a 2008-ban
+    mutattak be a játék első megjelenésének 50 éves évfordulóján.
+</p>
+<p class="tortenet-p">
+    A Spacewar! játékprogramot 1961-ben írták Martin Graetz, Alan Kotok és Steve Russell, az MIT hallgatói és
+    kutatói. A kétajtós szekrény méretű PDP-1 típusú számítógépen két űrhajó egymás elleni harcát szimulálták. A
+    programot a készítői ingyenesen terjesztették lyukszalagon (a korai számítógépek szabványos adathordozóján), s
+    hamar elterjedt az akkori tudományos kutatói szférában.
+</p>
+<div class="tortenetkep">
+    <img src="images/Joystick.png" alt="">
+    <div class="tortenetkepszoveg">
+        Joystick
     </div>
-    <p>
-        1971-ben Nolan Bushnell és Ted Dabney a Syzygy Engineering (később Atari) cégben társulva elkészítette az első
-        kereskedelmi forgalomban elérhető videójátékot Computer Space néven, amely a korábbi Spacewar! játékon alapult.
-        Majd 1972-ben, miután a cégük már Atari néven működött, kiadták Pong nevű játékukat, amelyet munkatársuk, Allan
-        Alcorn fejlesztett.
-    </p>
-    <p>
-        A legtöbb klasszikus társasjátéknak (sakk, dámajáték, gomoku stb.) készült számítógépes változata, de a
-        számítógéppel történő interakció fizikai korlátozottsága miatt az ügyességi játékok újfajta játékélmény
-        nyújtottak. A számítástechnika fejlődésével párhuzamosan a játékok látványvilága rohamosan fejlődött. Eközben a
-        lakossági személyi számítógép-eladások egyik fő ösztönzője az új számítógépes játékok növekvő erőforrásigénye
-        lett, s a szoftveripar a gazdaság egyik húzóerejévé vált. Az első teljesen 3 dimenziós játék az id Software
-        által készített Quake.
-    </p>
-    <p>
-        A valóságszerű látvány (fotorealisztikus világ) mellett megjelentek a rajzfilmszerű megjelenést használó játékok
-        is.
-    </p>
-    <div style="border: 20px solid rgb(44, 49, 38);"></div>
-    <div class="tortenetkep">
-        <img src="images/Pong_Game.gif" alt="">
-        <div class="tortenetkepszoveg">
-            Pong Játék
-        </div>
+</div>
+<p class="tortenet-p">
+    1971-ben Nolan Bushnell és Ted Dabney a Syzygy Engineering (később Atari) cégben társulva elkészítette az első
+    kereskedelmi forgalomban elérhető videójátékot Computer Space néven, amely a korábbi Spacewar! játékon alapult.
+    Majd 1972-ben, miután a cégük már Atari néven működött, kiadták Pong nevű játékukat, amelyet munkatársuk, Allan
+    Alcorn fejlesztett.
+</p>
+<p class="tortenet-p">
+    A legtöbb klasszikus társasjátéknak (sakk, dámajáték, gomoku stb.) készült számítógépes változata, de a
+    számítógéppel történő interakció fizikai korlátozottsága miatt az ügyességi játékok újfajta játékélmény
+    nyújtottak. A számítástechnika fejlődésével párhuzamosan a játékok látványvilága rohamosan fejlődött. Eközben a
+    lakossági személyi számítógép-eladások egyik fő ösztönzője az új számítógépes játékok növekvő erőforrásigénye
+    lett, s a szoftveripar a gazdaság egyik húzóerejévé vált. Az első teljesen 3 dimenziós játék az id Software
+    által készített Quake.
+</p>
+<p class="tortenet-p">
+    A valóságszerű látvány (fotorealisztikus világ) mellett megjelentek a rajzfilmszerű megjelenést használó játékok
+    is.
+</p>
+<div class="terkoz"></div>
+<div class="tortenetkep">
+    <img src="images/Pong_Game.gif" alt="">
+    <div class="tortenetkepszoveg">
+        Pong Játék
     </div>
-    <div style="border: 100px solid rgb(44, 49, 38);"></div>
-    <div style="border: 40px solid rgb(44, 49, 38);"></div>
+</div>
+<div class="vege-div"></div>
+<div class="vege-div"></div>
 </body>
 
 </html>
