--- a/mufajok.html
+++ b/mufajok.html
@@ -37,7 +37,7 @@
 
 <div id="topnav">
     <a href="index.html">Kezdőlap</a>
-    <a href="jatek_tortenet.html">Játék történet</a>
+    <a href="jatek_tortenet.html">Történet</a>
     <a href="onlinejatekok.html">Online játékok</a>
     <a href="sikeres.html">Sikeres játékok</a>
     <a href="speedrunok.html">Speedrunok</a>
