videó szerkesztése és h1 átírása p-re

--- a/speedrunok.html
+++ b/speedrunok.html
@@ -19,10 +19,10 @@
     </div>
     <hr>
     <h1>Speedrunok</h1>
-    <h1>A speedrunolás teknikája már az első híresebb videójátékok megjelenése óta jelen van,célja hogy a játékos különféle exploitok és taktikák,illetve glitchek segítségével gyorsabban kijátssza az adott játékot vagy játékszakaszt. Ez időre megy, és gyakran versenyeket is rendeznek belőle.</h1>
+    <p>A speedrunolás teknikája már az első híresebb videójátékok megjelenése óta jelen van,célja hogy a játékos különféle exploitok és taktikák,illetve glitchek segítségével gyorsabban kijátssza az adott játékot vagy játékszakaszt. Ez időre megy, és gyakran versenyeket is rendeznek belőle.</p>
 <div>
-    <iframe style="float:right" src="https://www.youtube.com/embed/Gum4GI2Jr0s?controls=0" frameborder="1"  height="100%"></iframe>
-    <ul>A leghíresebb speedrunoló játékok
+    <iframe style="float:right" src="https://www.youtube.com/embed/Gum4GI2Jr0s?controls=0&autoplay=1&mute=1" frameborder="0"  height="360px" width="640px"></iframe>
+    <ul id="srtablazat">A leghíresebb speedrunoló játékok
         <li>Portal</li>
         <li>Super Mario Széria</li>
         <li>Dark Souls III</li>
