--- a/mufajok.html
+++ b/mufajok.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Műfajok</title>
     <link rel="stylesheet" href="index.css">
-
+    <link rel="icon" href="images/favicon.ico.ico">
     <style>
         .mufaj-kep2 {
             width: 400px;
