--- a/sikeres.html
+++ b/sikeres.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A legsikeresebb játékok</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="images/favicon.ico.ico">
 </head>
 <body>
     <div id="topnav">
