--- a/speedrunok.html
+++ b/speedrunok.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A speedrunok mestersége</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="images/favicon.ico.ico">
 </head>
 <body>
  
