sikeres oldal + speedrunok fejlesztése

--- a/speedrunok.html
+++ b/speedrunok.html
@@ -19,11 +19,12 @@
         <a href="videojatekok.html">Videójátékok</a>
     </div>
     <hr>
-    <h1>Speedrunok</h1>
+    <img class="felsoszegely" src="images/layere.png" alt="">
+    <h1 class="srh1">Speedrunok</h1>
     <p>A speedrunolás teknikája már az első híresebb videójátékok megjelenése óta jelen van,célja hogy a játékos különféle exploitok és taktikák,illetve glitchek segítségével gyorsabban kijátssza az adott játékot vagy játékszakaszt. Ez időre megy, és gyakran versenyeket is rendeznek belőle.</p>
 <div>
-    <iframe style="float:right" src="https://www.youtube.com/embed/Gum4GI2Jr0s?controls=0&autoplay=1&mute=1" frameborder="0"  height="360px" width="640px"></iframe>
-    <ul id="srtablazat">A leghíresebb speedrunoló játékok
+    <iframe class="sriframe1" style="float:right" src="https://www.youtube.com/embed/Gum4GI2Jr0s?controls=0&autoplay=1&mute=1" frameborder="0"  height="360px" width="640px"></iframe>
+    <ul id="srsorozat">A leghíresebb speedrunoló játékok
         <li>Portal</li>
         <li>Super Mario Széria</li>
         <li>Dark Souls III</li>
@@ -34,5 +35,34 @@
         <li>Resident Evil Széria</li>
     </div>
 </ul>
+<h2 class="srh2">Versenyek</h2>
+<p>Ebből a stílusból szinte már egy játékkultúra alakult ,ki,sokan komolyan is veszik,hiszen erről egy oldal is létezik <a href="https://www.speedrun.com">speedrun.com</a>néven ahol megtekinthető szinte minden játék leggyorsabb kijátszási ideje, illetve a játékos userneve is</p>
+<table class="srtablazat">
+    <tr>
+        <td>ember neve</td>
+        <td>játék</td>
+    </tr>
+    <tr>
+        <td>1. oszlop</td>
+        <td>2.oszlop</td>
+    </tr>
+    <tr>
+        <td>1.</td>
+        <td>2.</td>
+    </tr>
+    <tr>
+        <td>1.</td>
+        <td>2.</td>
+    </tr>
+    <tr>
+        <td>1.</td>
+        <td>2.</td>
+    </tr>
+    <tr>
+        <td>1.</td>
+        <td>2.</td>
+    </tr>
+
+</table>
 </body>
 </html>
