játékosok és játékaik beírása + br kitörlése

--- a/sikeres.html
+++ b/sikeres.html
@@ -22,7 +22,7 @@
     <h1 class="sjh1 ">Mindenidők legsikeresebb játékai</h1>
             <div class="legsikeresebbkep">
                 </a><img src="images/codbo2.jpg" alt="Call of Duty: Black Ops II" title="Call of Duty: Black Ops II"></span>
-                <div class="legsikeresebbalairas">Call of Duty: Black Ops II <br>
+                <div class="legsikeresebbalairas">Call of Duty: Black Ops II
                    
                     <table>
                         <tr>
