--- a/speedrunok.html
+++ b/speedrunok.html
@@ -36,31 +36,39 @@
     </div>
 </ul>
 <h2 class="srh2">Versenyek</h2>
-<p>Ebből a stílusból szinte már egy játékkultúra alakult ,ki,sokan komolyan is veszik,hiszen erről egy oldal is létezik <a href="https://www.speedrun.com">speedrun.com</a>néven ahol megtekinthető szinte minden játék leggyorsabb kijátszási ideje, illetve a játékos userneve is</p>
+<p>Ebből a stílusból szinte már egy játékkultúra alakult ,ki,sokan komolyan is veszik,hiszen erről egy oldal is létezik <a href="https://www.speedrun.com">speedrun.com</a>néven ahol megtekinthető szinte minden játék leggyorsabb kijátszási ideje, illetve az adott játékos userneve is.</p>
 <table class="srtablazat">
     <tr>
-        <td>ember neve</td>
-        <td>játék</td>
+        <td>User neve</td>
+        <td>Játék</td>
     </tr>
     <tr>
-        <td>1. oszlop</td>
-        <td>2.oszlop</td>
+        <td>Suigi</td>
+        <td>Mario 64</td>
     </tr>
     <tr>
-        <td>1.</td>
-        <td>2.</td>
+        <td>Bastbolt</td>
+        <td>Getting Over It</td>
     </tr>
     <tr>
-        <td>1.</td>
-        <td>2.</td>
+        <td>Led_Astray</td>
+        <td>Portal 2</td>
     </tr>
     <tr>
-        <td>1.</td>
-        <td>2.</td>
+        <td>Cube1337x</td>
+        <td>Minecraft</td>
     </tr>
     <tr>
-        <td>1.</td>
-        <td>2.</td>
+        <td>Distortion2</td>
+        <td>Dark Souls széria</td>
+    </tr>
+    <tr>
+        <td>Zfg1</td>
+        <td>Legend of Zelda</td>
+    </tr>
+    <tr>
+        <td>Pest</td>
+        <td>Hollow Knight</td>
     </tr>
 
 </table>
